--- a/projects/01-starting-project/src/app/app.component.html
+++ b/projects/01-starting-project/src/app/app.component.html
@@ -1,5 +1,3 @@
-<header>
-  <img src="assets/angular-logo.png" alt="The Angular logo: The letter 'A'" />
-  <h1>Let's get started!</h1>
-  <p>Time to learn all about Angular!</p>
-</header>
+<app-header>
+  <h1>EasyTask</h1>
+</app-header>
