feat(01-starting-project/user): add dynamic CSS styling with class bindings

--- a/projects/01-starting-project/src/app/app.component.html
+++ b/projects/01-starting-project/src/app/app.component.html
@@ -5,7 +5,11 @@
     @for (user of users; track user.id) {
     <li>
       <!-- when I say {(select)="onSelectUser($event)"} that subscribes to the event, this means when I invoke the event, onSelectUser method will be called -->
-      <app-user [user]="user" (select)="onSelectUser($event)" />
+      <app-user
+        [user]="user"
+        [selected]="user.id === selectedUserId"
+        (select)="onSelectUser($event)"
+      />
     </li>
     }
   </ul>
