feat(01-starting-project/shared): using content-projection with ng-content in the user and task templates

--- a/projects/01-starting-project/src/app/user/user.component.html
+++ b/projects/01-starting-project/src/app/user/user.component.html
@@ -1,8 +1,8 @@
-<div>
+<app-card>
   <button [class.active]="selected" (click)="onSelectUser()">
     <!-- property binding -->
     <img [attr.src]="imagePath" [attr.alt]="user.name" />
     <!-- string interpolation -->
     <span>{{ user.name }}</span>
   </button>
-</div>
+</app-card>
