--- a/projects/01-starting-project/src/app/tasks/task/task.component.html
+++ b/projects/01-starting-project/src/app/tasks/task/task.component.html
@@ -1,12 +1,14 @@
-<article>
-  @if (task) {
-  <h2>{{ task.title }}</h2>
-  <time>{{ task.dueDate }}</time>
-  <p>{{ task.summary }}</p>
-  } @else {
-  <h2>There are no tasks to show!</h2>
-  }
-  <p class="actions">
-    <button (click)="onCompleteTask()">Complete</button>
-  </p>
-</article>
+<app-card>
+  <article>
+    @if (task) {
+    <h2>{{ task.title }}</h2>
+    <time>{{ task.dueDate }}</time>
+    <p>{{ task.summary }}</p>
+    } @else {
+    <h2>There are no tasks to show!</h2>
+    }
+    <p class="actions">
+      <button (click)="onCompleteTask()">Complete</button>
+    </p>
+  </article>
+</app-card>
