--- a/projects/01-starting-project/src/app/tasks/task/task.component.html
+++ b/projects/01-starting-project/src/app/tasks/task/task.component.html
@@ -2,7 +2,7 @@
   <article>
     @if (task) {
     <h2>{{ task.title }}</h2>
-    <time>{{ task.dueDate }}</time>
+    <time>{{ task.dueDate | date : "fullDate" }}</time>
     <p>{{ task.summary }}</p>
     } @else {
     <h2>There are no tasks to show!</h2>
