feat: extract dynamic route parameters using observables

--- a/src/app/users/user-tasks/user-tasks.component.html
+++ b/src/app/users/user-tasks/user-tasks.component.html
@@ -1,6 +1,6 @@
 <section id="tasks">
   <header>
-    <h2>{{ username() }} Tasks</h2>
+    <h2>{{ username }} Tasks</h2>
     <menu>
       <a>Add Task</a>
     </menu>
