feat: add more route links and relative links

--- a/src/app/users/user-tasks/user-tasks.component.html
+++ b/src/app/users/user-tasks/user-tasks.component.html
@@ -2,9 +2,9 @@
   <header>
     <h2>{{ username }} Tasks</h2>
     <menu>
-      <a>Add Task</a>
+      <a routerLink="tasks/new">Add Task</a>
     </menu>
   </header>
 
-  <router-outlet/>
+  <router-outlet />
 </section>
