feat: set query parameters

--- a/src/app/tasks/tasks.component.css
+++ b/src/app/tasks/tasks.component.css
@@ -1,3 +1,13 @@
+a {
+  text-decoration: none;
+  color: #c6a7ed;
+}
+
+a:hover,
+a.active {
+  color: #9b79c6;
+}
+
 ul {
   list-style: none;
   margin: 1rem 0;
