feat: extract query parameters via inputs

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,6 +1,9 @@
 <p>
-  <a routerLink="./" [queryParams]="{ order: 'asc' }">
-    Sort Ascending or Descending
+  <a
+    routerLink="./"
+    [queryParams]="{ order: order() === 'asc' ? 'desc' : 'asc' }"
+  >
+    Sort {{ order() === "asc" ? "Descending" : "Ascending" }}
   </a>
 </p>
 
